--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Aqui vai o titulo do email</title>
 </head>
 <body>
+<div>
   <p>
     <h1 id="1">Titulo1</h1>
     <h2 id="2">Titulo2</h2>
@@ -13,7 +14,7 @@
     <h4 id="4">Titulo4</h4>
     <h5 id="5">Titulo5</h5>
     <h6 id="6">Titulo6</h6>
-    <img src="./img/RomuloNogueira.jpg" alt="um desenho do RomuloNogueira" height="200" width="200" title="Romulo Nogueira animado">
+    <img src="./assets/RomuloNogueira.jpg" alt="um desenho do RomuloNogueira" height="200" width="200" title="Romulo Nogueira animado">
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum suscipit saepe minima voluptate ratione maxime dolores! Eius itaque praesentium dicta, veritatis maiores odio, repudiandae sed enim velit, quas unde? Officia.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum suscipit saepe minima voluptate ratione maxime dolores! Eius itaque praesentium dicta, veritatis maiores odio, repudiandae 2ed enimi velit, quas unde? Officia.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum suscipit saepe minima voluptate ratione maxime dolores! Eius itaque praesentium dicta, veritatis maiores odio, repudiandae sed enim velit, quas unde? Officia.</p>
@@ -21,6 +22,8 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum suscipit saepe minima voluptate ratione maxime dolores! Eius itaque praesentium dicta, veritatis maiores odio, repudiandae sed enim velit, quas unde? Officia.</p>
     
   </p>
+</div>
+<div>
   <br>
   <a href="https://www.google.com/" target="_blank">Entrar no site</a>
   <hr>
@@ -40,6 +43,6 @@
   <hr>
   <a href="#6">Ir para o Titulo6</a>
   <hr>
-  
+</div>
 </body>
 </html>
